More work to implement foundation.
This commit makes several improvements to the foundation setup.

- Adds list of recent posts to the top-bar and off canvas menu
- Adds social networking icons and gets rid of cluttered asides
- Adds foundation icons to the site
- Minor tweaks and enhancements to the layout.

--- a/sass/foundation.scss
+++ b/sass/foundation.scss
@@ -7,6 +7,7 @@
 
 // Behold, here are all the Foundation components.
 @import
+  "foundation/foundation-icons",
   "foundation/components/accordion",
   "foundation/components/alert-boxes",
   "foundation/components/block-grid",
