--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -22,4 +22,37 @@
 
 nav.top-bar { 
   margin-bottom: 10px;
+
+  li.rss a { 
+    font-size: 1.75em;
+    color: #d1d1d1;
+  }
+}
+
+.pagination { 
+  margin-bottom: 15px;
+}
+
+section.googleplus.panel {
+  a { 
+    color: #D2412E;
+  }
+}
+
+.social { 
+  @media screen {
+    margin: 10px 0; 
+    img { 
+      max-width: 50px;
+      max-height: 50px;
+    }
+  }
+
+  @media screen and (min-width: 40.063em) { 
+    margin: 125px 0 0 50px;
+    img { 
+      max-width: 65px; 
+      max-height: 65px;
+    }
+  }
 }
