--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -5,7 +5,6 @@
         <h1><a href="#">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</a></h1>
       {% endif %}
     </li>
-    <!--<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>-->
   </ul>
 
   <section class="top-bar-section">
@@ -18,7 +17,7 @@
           </form>
         </li>
       {% endif %}
-      <li><a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS">RSS <i class="fi-rss"></i></a></li>
+      <li class="rss"><a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS"><i class="fi-rss"></i></a></li>
       {% if site.subscribe_email %}
         <li><a href="{{ site.subscribe_email }}" rel="subscribe-email" title="subscribe via email">Email</a></li>
       {% endif %}
