Moves blog index to /blog/index
Also creates a new default page but it's not setup and working yet so
currently I'm just redirecting to /blog/index for the home page.

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,25 +1,20 @@
 <ul class="left">
-  <li><a href="{{ root_url }}/">Dominick J. DeStasio</a></li>
+  <li><a href="{{ root_url }}/">Home</a></li>
   <li class="has-dropdown">
-    <a href="#">Recent Posts</a>
+    <a href="{{ root_url }}/blog/index.html">Blog</a>
     <ul class="dropdown">
-      {% for post in site.posts limit: site.recent_posts %}
-      <li class="post">
-        <a href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
+      <li class="show-for-small-only"><a href="{{root_url}}/blog/index.html">Blog Home</a></li>
+      <li class="has-dropdown">
+        <a href="#">Recent Posts</a>
+        <ul class="dropdown">
+          {% for post in site.posts limit: site.recent_posts %}
+          <li class="post">
+            <a href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
+          </li>
+          {% endfor %}
+        </ul>
       </li>
-      {% endfor %}
-    </ul>
-  </li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-</ul>
-<!--
-<ul class="right">
-  <li><a href="#">Button</a></li>
-  <li class="has-dropdown">
-    <a href="#">Dropdown</a>
-    <ul class="dropdown">
-      <li><a href="#">First link in dropdown</a></li>
+      <li><a href="{{ root_url }}/blog/archives">Blog Archive</a></li>
     </ul>
   </li>
 </ul>
--->
