--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -20,39 +20,63 @@
 //$sidebar-pad-wide: 20px;
 //$sidebar-width-wide: 300px;
 
-nav.top-bar { 
-  margin-bottom: 10px;
-
-  li.rss a { 
-    font-size: 1.75em;
-    color: #d1d1d1;
-  }
+* {
+    margin: 0;
 }
 
-.pagination { 
-  margin-bottom: 15px;
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -155px;
+}
+
+.footer { 
+}
+
+.footer, .push {
+    height: 155px;
+}
+
+nav.top-bar {
+    margin-bottom: 10px;
+    li.rss a {
+        font-size: 1.75em;
+        color: #d1d1d1;
+    }
+}
+
+.pagination {
+    margin-bottom: 15px;
+}
+
+.top-bar .toggle-topbar.menu-icon {
+    padding-right: 20px;
 }
 
 section.googleplus.panel {
-  a { 
-    color: #D2412E;
-  }
+    a {
+        color: #D2412E;
+    }
 }
 
-.social { 
-  @media screen {
-    margin: 10px 0; 
-    img { 
-      max-width: 50px;
-      max-height: 50px;
+.social {
+    @media screen {
+        margin: 10px 0;
+        img {
+            max-width: 50px;
+            max-height: 50px;
+        }
     }
-  }
-
-  @media screen and (min-width: 40.063em) { 
-    margin: 125px 0 0 50px;
-    img { 
-      max-width: 65px; 
-      max-height: 65px;
+    @media screen and (min-width: 40.063em) {
+        margin: 125px 0 0 50px;
+        img {
+            max-width: 65px;
+            max-height: 65px;
+        }
     }
-  }
 }
